objects/Nebula__LogEntry__c.object
<CustomObject>
    <fields>
        <fullName>Nebula__LimitsQueueableJobs__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsQueueableJobsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsQueueableJobsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queueable Jobs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueriesMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Queries Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueriesUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Queries Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsSoqlQueriesUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsSoqlQueriesMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOQL Queries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryLocatorRowsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Query Locator Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryLocatorRowsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Query Locator Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryLocatorRows__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsSoqlQueryLocatorRowsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsSoqlQueryLocatorRowsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOQL Query Locator Rows</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryRowsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Query Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryRowsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Query Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryRows__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsSoqlQueryRowsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsSoqlQueryRowsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOQL Query Rows</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoslSearchesMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOSL Searches Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoslSearchesUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOSL Searches Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoslSearches__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsSoslSearchesUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsSoslSearchesMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOSL Searches</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LogTransactionId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>Nebula__Log__r.Nebula__TransactionId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Transaction ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__Log__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Log</label>
        <referenceTo>Nebula__Log__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>LogEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggedByUsernameLink__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <formula>Nebula__Log__r.Nebula__LoggedByUsernameLink__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggingLevelOrdinal__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Logging Level Ordinal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggingLevelWithImage__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <formula>CASE(
    TEXT(Nebula__LoggingLevel__c),
    &apos;ERROR&apos;, IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;&apos;, 16, 16),
    &apos;WARN&apos;, IMAGE(&apos;/img/samples/flag_yellow.gif&apos;, &apos;&apos;, 16, 16),
    IMAGE(&apos;/img/samples/flag_green.gif&apos;, &apos;&apos;, 16, 16)
)
+ &apos; &apos; + TEXT(Nebula__LoggingLevel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggingLevel__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Logging Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Nebula__LoggingLevel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__MessageMasked__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if sensitive data was removed from the message, using log entry data mask rules</inlineHelpText>
        <label>Message Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__MessageTruncated__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the message was truncated due to being too long to fit into the Message field</inlineHelpText>
        <label>Message Truncated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__Message__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__OriginLocation__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Origin Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OriginType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Origin Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                    <color>#333333</color>
                    <label>Apex</label>
                </value>
                <value>
                    <fullName>Component</fullName>
                    <color>#A845DC</color>
                    <label>Component</label>
                </value>
                <value>
                    <fullName>Flow</fullName>
                    <color>#FFCC33</color>
                    <label>Flow</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__Origin__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__OriginType__c) + IF(Nebula__OriginLocation__c == null, &apos;&apos;, &apos;.&apos; + Nebula__OriginLocation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordCollectionSize__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The number of items contained in the collection of records</description>
        <inlineHelpText>The number of items contained in the collection of records</inlineHelpText>
        <label>Related Record Collection Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordCollectionType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Related Record Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <label>Single Record</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__RecordDetailedLink__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>IF(
    NOT(ISBLANK(Nebula__RecordId__c)),
    CASE(
        TEXT(Nebula__RecordSObjectClassification__c),
        &apos;Custom Object&apos;, HYPERLINK(
            &apos;/&apos; + Nebula__RecordId__c,
            TEXT(Nebula__RecordSObjectType__c) + &apos;: &apos; + IF(
                ISBLANK(Nebula__RecordName__c),
                Nebula__RecordId__c,
                Nebula__RecordName__c
            ),
            &apos;_top&apos;
        ),
        &apos;Standard Object&apos;, HYPERLINK(
            &apos;/&apos; + Nebula__RecordId__c,
            TEXT(Nebula__RecordSObjectType__c) + &apos;: &apos; + IF(
                ISBLANK(Nebula__RecordName__c),
                Nebula__RecordId__c,
                Nebula__RecordName__c
            ),
            &apos;_top&apos;
        ),
        IF(
            ISBLANK(Nebula__RecordId__c),
            null,
            IF(
                ISBLANK(Nebula__RecordName__c) &amp;&amp; NOT(ISBLANK(Nebula__RecordId__c)),
                TEXT(Nebula__RecordSObjectType__c) + &apos;: &apos; + Nebula__RecordId__c,
                TEXT(Nebula__RecordSObjectType__c) + &apos;: &apos; + Nebula__RecordName__c
            )
        )
    ),
    IF(
        ISBLANK(TEXT(Nebula__RecordCollectionType__c)),
        &apos;&apos;,
        IF(
            TEXT(Nebula__RecordCollectionType__c) = &apos;Map&apos;,
            TEXT(Nebula__RecordCollectionType__c) + &apos;&lt;Id, &apos; + TEXT(Nebula__RecordSObjectType__c) + &apos;&gt;&apos;,
            TEXT(Nebula__RecordCollectionType__c) + &apos;&lt;&apos; + TEXT(Nebula__RecordSObjectType__c) + &apos;&gt;&apos;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <externalId>true</externalId>
        <label>Related Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordJsonMasked__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if sensitive data was removed from the record JSON, using log entry data mask rules</inlineHelpText>
        <label>Record JSON Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordJson__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>JSON of the related SObject record</description>
        <label>Related Record JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordLink__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>IF(
    NOT(ISBLANK(Nebula__RecordId__c)),
    CASE(
        TEXT(Nebula__RecordSObjectClassification__c),
        &apos;Custom Object&apos;, HYPERLINK(
            &apos;/&apos; + Nebula__RecordId__c,
            IF(
                ISBLANK(Nebula__RecordName__c),
                Nebula__RecordId__c,
                Nebula__RecordName__c
            ),
            &apos;_top&apos;
        ),
        &apos;Standard Object&apos;, HYPERLINK(
            &apos;/&apos; + Nebula__RecordId__c,
            IF(
                ISBLANK(Nebula__RecordName__c),
                Nebula__RecordId__c,
                Nebula__RecordName__c
            ),
            &apos;_top&apos;
        ),
        IF(
            ISBLANK(Nebula__RecordName__c),
            Nebula__RecordId__c,
            Nebula__RecordName__c
        )
    ),
    IF(
        ISBLANK(TEXT(Nebula__RecordCollectionType__c)),
        &apos;&apos;,
        IF(
            TEXT(Nebula__RecordCollectionType__c) = &apos;Map&apos;,
            TEXT(Nebula__RecordCollectionType__c) + &apos;&lt;Id, &apos; + TEXT(Nebula__RecordSObjectType__c) + &apos;&gt;&apos;,
            TEXT(Nebula__RecordCollectionType__c) + &apos;&lt;&apos; + TEXT(Nebula__RecordSObjectType__c) + &apos;&gt;&apos;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Related Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordSObjectClassification__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Related Record Object Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Event Object</fullName>
                </value>
                <value>
                    <fullName>Chatter Feed Object</fullName>
                </value>
                <value>
                    <fullName>Custom Metadata Type Object</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Custom Setting Object</fullName>
                </value>
                <value>
                    <fullName>Field History Tracking Object</fullName>
                </value>
                <value>
                    <fullName>Platform Event Object</fullName>
                </value>
                <value>
                    <fullName>Record Share Object</fullName>
                </value>
                <value>
                    <fullName>Standard Object</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__RecordSObjectTypeNamespace__c</fullName>
        <complianceGroup>None</complianceGroup>
        <externalId>true</externalId>
        <label>Related Record Object Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordSObjectType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Related Record Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__StackTrace__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__Timestamp__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nebula__TransactionEntryNumber__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The sequential number of this log entry within the transaction</description>
        <inlineHelpText>The sequential number of this log entry within the transaction</inlineHelpText>
        <label>Entry #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__TriggerIsExecuting__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Trigger Is Executing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__TriggerOperationType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Trigger Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFTER_DELETE</fullName>
                </value>
                <value>
                    <fullName>AFTER_INSERT</fullName>
                </value>
                <value>
                    <fullName>AFTER_UNDELETE</fullName>
                </value>
                <value>
                    <fullName>AFTER_UPDATE</fullName>
                </value>
                <value>
                    <fullName>BEFORE_DELETE</fullName>
                </value>
                <value>
                    <fullName>BEFORE_INSERT</fullName>
                </value>
                <value>
                    <fullName>BEFORE_UPDATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__TriggerSObjectType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Trigger Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__Trigger__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>IF(
    Nebula__TriggerIsExecuting__c,
    TEXT(Nebula__TriggerSObjectType__c) + &apos;.&apos; + TEXT(Nebula__TriggerOperationType__c),
    null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger</label>
        <type>Text</type>
    </fields>
    <label>Log Entry</label>
    <listViews>
        <fullName>Nebula__All</fullName>
        <columns>NAME</columns>
        <columns>Nebula__Log__c</columns>
        <columns>Nebula__LoggingLevelWithImage__c</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__Message__c</columns>
        <columns>Nebula__OriginType__c</columns>
        <columns>Nebula__OriginLocation__c</columns>
        <columns>Nebula__RecordDetailedLink__c</columns>
        <columns>Nebula__Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllApexLogEntries</fullName>
        <columns>NAME</columns>
        <columns>Nebula__Log__c</columns>
        <columns>Nebula__LoggingLevelWithImage__c</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__Message__c</columns>
        <columns>Nebula__ApexClassName__c</columns>
        <columns>Nebula__ApexInnerClassName__c</columns>
        <columns>Nebula__ApexMethodName__c</columns>
        <columns>Nebula__Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__OriginType__c</field>
            <operation>equals</operation>
            <value>Apex</value>
        </filters>
        <label>All Apex Log Entries</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllComponentLogEntries</fullName>
        <columns>NAME</columns>
        <columns>Nebula__Log__c</columns>
        <columns>Nebula__LoggingLevelWithImage__c</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__Message__c</columns>
        <columns>Nebula__ComponentType__c</columns>
        <columns>Nebula__ComponentApiName__c</columns>
        <columns>Nebula__ComponentFunctionName__c</columns>
        <columns>Nebula__Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__OriginType__c</field>
            <operation>equals</operation>
            <value>Component</value>
        </filters>
        <label>All Component Log Entries</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllERRORandWARNLogEntries</fullName>
        <columns>NAME</columns>
        <columns>Nebula__Log__c</columns>
        <columns>Nebula__LoggingLevelWithImage__c</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__Message__c</columns>
        <columns>Nebula__OriginType__c</columns>
        <columns>Nebula__OriginLocation__c</columns>
        <columns>Nebula__RecordDetailedLink__c</columns>
        <columns>Nebula__Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__LoggingLevel__c</field>
            <operation>equals</operation>
            <value>ERROR,WARN</value>
        </filters>
        <label>All ERROR and WARN Log Entries</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllFlowLogEntries</fullName>
        <columns>NAME</columns>
        <columns>Nebula__Log__c</columns>
        <columns>Nebula__LoggingLevelWithImage__c</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__Message__c</columns>
        <columns>Nebula__OriginLocation__c</columns>
        <columns>Nebula__FlowProcessType__c</columns>
        <columns>Nebula__FlowTriggerType__c</columns>
        <columns>Nebula__Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__OriginType__c</field>
            <operation>equals</operation>
            <value>Flow</value>
        </filters>
        <label>All Flow Log Entries</label>
    </listViews>
    <nameField>
        <label>Entry ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>